# Movies_API

./: main.py  pyproject.toml
data/: movies.csv
src/: main.py
src/routers/: movies.py
src/services/: movies_db.py
utils/: data_loader.py
